# Work_2025

./: .gitignore  .gitmodules  README.md
arduino_scripts/main.ino/: main.ino
arduino_scripts/main.ino/main/: main.ino
arduino_scripts/uart.ino/main_uart/: main_uart.ino
firmware_esp/ESP32_slave/: CMakeLists.txt  sdkconfig.esp32doit-devkit-v1
firmware_esp/ESP32_slave/lib/encoder/: encoder.c  encoder.h
firmware_esp/ESP32_slave/lib/i2c_communication/: i2c_communication.c  i2c_communication.h
firmware_esp/ESP32_slave/lib/pid/: pid.c
firmware_esp/ESP32_slave/lib/task_manager/: task_manager.c  task_manager.h
firmware_esp/ESP32_slave/lib/utils/: utils.c  utils.h
firmware_esp/ESP32_slave/src/: main.c
firmware_esp/ESP32_slave1/: CMakeLists.txt
firmware_esp/ESP32_slave1/lib/h_bridge/: h_bridge.h
firmware_esp/ESP32_slave1/lib/i2c_communication/: i2c_communication.c  i2c_communication.h
firmware_esp/ESP32_slave1/lib/pid/: pid.c
firmware_esp/ESP32_slave1/lib/sincronization/: sincronization.h
firmware_esp/ESP32_slave1/lib/task_manager/: task_manager.h
firmware_esp/ESP32_slave1/lib/utils/: utils.c
firmware_esp/ESP32_slave1/src/: main.c
firmware_esp/ESP32_slave_FRONT/lib/encoder/: encoder.h
firmware_esp/ESP32_slave_FRONT/lib/h_bridge/: h_bridge.h
firmware_esp/ESP32_slave_FRONT/lib/i2c_communication/: i2c_communication.c  i2c_communication.h
firmware_esp/ESP32_slave_FRONT/lib/mqtt_communication/: mqtt_communication.c  mqtt_communication.h
firmware_esp/ESP32_slave_FRONT/lib/pid/: pid.c
firmware_esp/ESP32_slave_FRONT/lib/serial_communication/: uart_communication.h
firmware_esp/ESP32_slave_FRONT/lib/task_manager/: task_manager.c  task_manager.h
firmware_esp/ESP32_slave_FRONT/lib/utils/: utils.c
firmware_esp/ESP32_slave_FRONT/src/: idf_component.yml
firmware_esp/ESP32_slave_REAR/: platformio.ini
firmware_esp/ESP32_slave_REAR/components/rotary_encoder/: pytest_rotary_encoder.py
firmware_esp/ESP32_slave_REAR/lib/encoder/: encoder.c  encoder.h
firmware_esp/ESP32_slave_REAR/lib/h_bridge/: h_bridge.c  h_bridge.h
firmware_esp/ESP32_slave_REAR/lib/i2c_communication/: i2c_communication.c  i2c_communication.h
firmware_esp/ESP32_slave_REAR/lib/mqtt_communication/: mqtt_communication.c  mqtt_communication.h
firmware_esp/ESP32_slave_REAR/lib/pid/: pid.c  pid.h
firmware_esp/ESP32_slave_REAR/lib/serial_communication/: uart_communication.c  uart_communication.h
firmware_esp/ESP32_slave_REAR/lib/sincronization/: sincronization.c
firmware_esp/ESP32_slave_REAR/lib/task_manager/: task_manager.c
firmware_esp/ESP32_slave_REAR/lib/utils/: utils.c  utils.h
firmware_esp/ESP32_slave_REAR/src/: main.c
jetson/robot_ws/: .~lock.comparacao.csv#  comparacao.csv  frames.gv  reset_usb.sh  steps_to_corret.txt
jetson/robot_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
jetson/robot_ws/logs/robot_base_controller/: build.make.000.log.stderr
jetson/robot_ws/logs/robot_navigation/: build.check.003.log.stderr  build.check.004.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr
jetson/robot_ws/logs/robot_scheduler/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
jetson/robot_ws/logs/rplidar_ros/: build.make.000.log.stderr
jetson/robot_ws/src/robot_approach/: CMakeLists.txt  package.xml
jetson/robot_ws/src/robot_base_controller/: CMakeLists.txt  package.xml
jetson/robot_ws/src/robot_perception/: CMakeLists.txt  package.xml
jetson/robot_ws/src/robot_perception/launch/: ultrasonic.launch  vision_identification.launch
jetson/robot_ws/src/robot_perception/msg/: Identify.msg  UltrasonicDistances.msg
jetson/robot_ws/src/robot_perception/scripts/: i2c_ultrasonic.py  vision_identification.py
jetson/robot_ws/src/robot_scheduler/: CMakeLists.txt  package.xml
jetson/robot_ws/src/robot_scheduler/data_files/: alturas.yaml  id_to_classObject.yaml
jetson/robot_ws/src/robot_scheduler/launch/: scheduler_general.launch
jetson/robot_ws/src/robot_scheduler/msg/: Object.msg  SchedulerCommand.msg  SchedulerResponse.msg  Subtask.msg  TaskRequest.msg
jetson/robot_ws/src/robot_scheduler/scripts/: reading_bagFile.py  scheduler.py  scheduler_communication.py
jetson/robot_ws/src/robot_scheduler/src/: scheduler.py
jetson/robot_ws/src/usb_cam_launch/: CMakeLists.txt  package.xml
jetson/robot_ws/src/usb_cam_launch/launch/: apriltag_detector.launch  usb_cam.launch
(+98 files in other folders)
