<?xml version="1.0"?>
<package format="2">
  <name>usb_cam_launch</name>
  <version>0.0.0</version>
  <description>The usb_cam_launch package</description>

  <maintainer email="vitor@example.com">Vitor</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>usb_cam</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
  </export>
</package>
